--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     volumes:
       - /var/www/html:/usr/share/nginx/html:ro
       - /etc/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/nginx/nginx1.conf:/etc/nginx/nginx.conf:ro
+      - /etc/nginx/blacklist.conf:/home/blacklist.conf:ro
+      - /etc/nginx/blockips.conf:/home/blockips.conf:ro
     network_mode: bridge
     ports:
       - 80:80
