--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
     image: nginx
     restart: always
     volumes:
-      - /var/www/html:/usr/share/nginx/html:ro
-      - /etc/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/nginx/website:/usr/share/nginx/html:ro
       - /etc/nginx/nginx1.conf:/etc/nginx/nginx.conf:ro
-      - /etc/nginx/blacklist.conf:/home/blacklist.conf:ro
-      - /etc/nginx/blockips.conf:/home/blockips.conf:ro
+      - /etc/nginx/sites-enabled/borys:/etc/nginx/conf.d/default.conf:ro
+      - /etc/nginx/blacklist.conf:/etc/nginx/blacklist.conf:ro
+      - /etc/nginx/blockips.conf:/etc/nginx/blockips.conf:ro
     network_mode: bridge
     ports:
       - 80:80
